# teknofest_hava_savunma

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  argus_desktop.py  argus_runner.py  gokkalkan_desktop.py  gokkalkan_runner.py  manus_test.txt  pyproject.toml  pyrightconfig.json  requirements.txt  sancar_desktop.py  sancar_runner.py  simulasyon_baslat.py  test_output.txt
.github/workflows/: ci.yml  lint.yml  quality_check.yml
argus-ui/: ISRAEL_AIR_DEFENSE_RESEARCH.md  MULTILAYER_ARCHITECTURE.md  index.html  simulation.test.ts
argus-ui/src/pages/: CommandCenter.tsx
docs/: ADVANCED_EW_SIGNAL_PROCESSING.md  LORE.md  MANIFESTO.md  MATH_MODELS.md  SARTNAME_2026.md  TECHNICAL_GUIDE.md  TEKNIK_MIMARI.md
gokkalkan-ui/: ISRAEL_AIR_DEFENSE_RESEARCH.md  MULTILAYER_ARCHITECTURE.md  index.html  routers.ts
gokkalkan-ui/src/: App.tsx  index.css
logs/aar/: events_20260325_113718.csv  events_20260404_182825.csv  events_20260404_194505.csv  telemetry_20260325_113718.csv  telemetry_20260404_180319.csv  telemetry_20260404_182802.csv  telemetry_20260404_182825.csv  telemetry_20260404_194505.csv  telemetry_20260404_204444.csv
sancar-ui/: ISRAEL_AIR_DEFENSE_RESEARCH.md  MULTILAYER_ARCHITECTURE.md  index.html
src/: aar_logger.py  aar_reporter.py  api.py  competition.py  desktop_app.py  engine.py  evasion_intelligence.py  interceptor.py  kalman_takip.py  main.py  missions.py  models.py  network_manager.py  radar.py  scoring.py  strategic_analyzer.py  tehdit_siniflandirici.py
src/static/: app.js  index.html  style.css
tests/: test_fusion.py  test_simulasyon.py
(+4 files in other folders)
